manifests/ovn-injector/ovn-injector.yaml
---
# Source: ovn-kubernetes-chart/templates/ovn-setup.yaml
# ovn-host-network-namespace.yaml
#
# Create the namespace for classifying host network traffic.
#
# This provisioning is done as part of installation after the cluster is
# up and before the ovn daemonsets are created.
apiVersion: v1
kind: Namespace
metadata:
  name: ovn-host-network
---
# Source: ovn-kubernetes-chart/charts/ovn-kubernetes-resource-injector/templates/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    dpu.nvidia.com/component: ovn-kubernetes-resource-injector
    helm.sh/chart: ovn-kubernetes-resource-injector-1.0.0
    app.kubernetes.io/name: ovn-kubernetes-resource-injector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
  name: release-name-ovn-kubernetes-resource-injector-webhook
  namespace: ovn-kubernetes
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    dpu.nvidia.com/component: ovn-kubernetes-resource-injector
    app.kubernetes.io/name: ovn-kubernetes-resource-injector
    app.kubernetes.io/instance: release-name
---
# Source: ovn-kubernetes-chart/charts/ovn-kubernetes-resource-injector/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-ovn-kubernetes-resource-injector
  namespace: ovn-kubernetes
  labels:
    dpu.nvidia.com/component: ovn-kubernetes-resource-injector
    helm.sh/chart: ovn-kubernetes-resource-injector-1.0.0
    app.kubernetes.io/name: ovn-kubernetes-resource-injector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      dpu.nvidia.com/component: ovn-kubernetes-resource-injector
      app.kubernetes.io/name: ovn-kubernetes-resource-injector
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        dpu.nvidia.com/component: ovn-kubernetes-resource-injector
        app.kubernetes.io/name: ovn-kubernetes-resource-injector
        app.kubernetes.io/instance: release-name
        ovn.dpu.nvidia.com/skip-injection: ""
    spec:
      containers:
      - args:
        - --leader-elect
        - --nad-namespace=ovn-kubernetes
        - --nad-name=dpf-ovn-kubernetes
        command:
        - /ovnkubernetesresourceinjector
        image: ghcr.io/nvidia/ovn-kubernetes:v25.7.0-beta.4
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: webhook
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      imagePullSecrets:
      - name: dpf-pull-secret
      serviceAccountName: release-name-ovn-kubernetes-resource-injector
      terminationGracePeriodSeconds: 10
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: release-name-ovn-kubernetes-resource-injector-webhook-cert

---
# Source: ovn-kubernetes-chart/charts/ovn-kubernetes-resource-injector/templates/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    dpu.nvidia.com/component: ovn-kubernetes-resource-injector
    helm.sh/chart: ovn-kubernetes-resource-injector-1.0.0
    app.kubernetes.io/name: ovn-kubernetes-resource-injector
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/inject-ca-from: ovn-kubernetes/release-name-ovn-kubernetes-resource-injector-webhook
  name: release-name-ovn-kubernetes-resource-injector
  namespace: ovn-kubernetes
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: release-name-ovn-kubernetes-resource-injector-webhook
      namespace: ovn-kubernetes
      path: /mutate--v1-pod
  failurePolicy: Fail
  name: ovn.dpu.nvidia.com
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: ovn.dpu.nvidia.com/skip-injection
      operator: DoesNotExist
